--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+/*
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -25,9 +26,15 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+*/
+
+html, body, :root {
+  @apply h-full w-full bg-red-200
+}
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
 }
+
